tests/NormalTests/paczka1/small_fuzzy/62197534.err
Error in line 1: B2Iw9D3 S257 460,9
Error in line 4: B2Iw9D3 A18 5,1
